# Loop-Speed-Benchmark

./: LICENSE  LoopSpeed.sln  README.md  benchmark.sh  benchmark_results.txt  data_visualization_README.md  generate_test_data.py  loop  parse_benchmarks.py  run_loops.sh  sorted_data.txt  visualize_performance.py
MergeSort/: PL-Benchmarks.sln  README.md
PL-Benchmark/: README.md  RUNNING.md  activate_venv.sh  benchmark_input.txt  binary_search_input.txt  binary_search_results.txt  binary_search_targets.txt  init_structure.sh  migrate_implementations.sh  project_overview.md  run.sh  sorted_data.txt
SpeedTest/: Mergesort.tasty  README.md  benchmark.sh  build.sh  results.csv  run_benchmarks.sh
asm/: README.md  loop  loop.asm
asmOptimized/: loop  loop.asm
assembly/: README.md
bash/: README.md  loop.sh
bashOptimized/: loop.sh
c/: README.md  loop  loop.c
cpp/: README.md  loop  loop.cpp
csharp/: Loop.cs  Loop.csproj  README.md
go/: README.md  loop  loop.go
goOptimized/: loop  loop.go
haskell/: Loop.hs  README.md
java/: Loop.java  README.md
js/: README.md  loop.js
kotlin/: Loop.kt  README.md
lua/: README.md  loop.lua
perl/: README.md  loop.pl  loop_jit.pl
php/: README.md  loop.php
python/: README.md  loop.py
r/: README.md  loop.r
ruby/: loop.rb
rust/: Cargo.toml  README.md  loop.rs
rust/src/: main.rs  merge_sort.rs
scala/: Loop.scala  README.md
swift/: Package.swift  loop  loop.swift
ts/: README.md  loop.js  loop.ts  package-lock.json  package.json  tsconfig.json
typescript/: package-lock.json
zig/: README.md  loop  loop.zig
(+145 files in other folders)
