[package]
name = "merge_sort"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A generic merge sort implementation in Rust"

[dependencies]
# No external dependencies needed for this implementation

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
